fix : change gap of navigation on desktop screens

--- a/app/[locale]/styles/partials/_navigation.scss
+++ b/app/[locale]/styles/partials/_navigation.scss
@@ -20,7 +20,7 @@
   @include useScreen("tablet-xl") {
     max-width: 1200px;
     margin: 0 auto;
-    gap: 13.5rem;
+    gap: 7.5rem;
   }
 }
 
